// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`SchoolCard should render properly with all props assigned 1`] = `
<a
  className="cardLinkOverrides"
  href="https://www.codeplatoon.org"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    className="screenReaderOnly"
  >
    Opens in new window
  </span>
  <article
    className="Card SchoolCard animatedCard"
  >
    <template
      className="content"
    >
      <img
        alt="Code Platoon Logo"
        className="logo"
        src="undefinedcodeSchoolLogos/code_platoon.jpg"
      />
      <section
        className="schoolCardText"
      >
        <h5
          className="name"
        >
          Code Platoon
        </h5>
        <address
          className="location"
        >
          Chicago, 
          IL
        </address>
        <ul
          className="info"
        >
          <li>
            GI Bill Accepted: 
            <b>
              Yes
            </b>
          </li>
          <li>
            Commitment: 
            <b>
              Full-Time
            </b>
          </li>
          <li>
            Hardware Included: 
            <b>
              No
            </b>
          </li>
        </ul>
      </section>
    </template>
  </article>
</a>
`;

exports[`SchoolCard should render properly with all required assigned 1`] = `
<a
  className="cardLinkOverrides"
  href="https://www.codeplatoon.org/not-real"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    className="screenReaderOnly"
  >
    Opens in new window
  </span>
  <article
    className="Card SchoolCard animatedCard"
  >
    <template
      className="content"
    >
      <img
        alt="Code Platoon Fake Logo"
        className="logo"
        src="undefinedcodeSchoolLogos/code_platoon.jpg"
      />
      <section
        className="schoolCardText"
      >
        <h5
          className="name"
        >
          Code Platoon Fake
        </h5>
        <address
          className="location"
        />
        <ul
          className="info"
        >
          <li>
            GI Bill Accepted: 
            <b>
              No
            </b>
          </li>
          <li>
            Commitment: 
            <b>
              Flexible
            </b>
          </li>
          <li>
            Hardware Included: 
            <b>
              Yes
            </b>
          </li>
        </ul>
      </section>
    </template>
  </article>
</a>
=======
exports[`SchoolCard should render with required props 1`] = `
<Card
  className="SchoolCard"
  hasAnimationOnHover={false}
>
  <FrontSchoolCard
    cardFlipCallback={[Function]}
    hasHardwareIncluded={true}
    hasHousing={true}
    hasOnline={true}
    hasOnlyOnline={false}
    isFullTime={true}
    locations={
      Array [
        Object {
          "address1": "825 Battery Street",
          "address2": "3rd Floor",
          "city": "San Francisco",
          "state": "CA",
          "va_accepted": true,
          "zip": 94111,
        },
        Object {
          "address1": "123Battery Street",
          "address2": "Ste 1",
          "city": "San Diego",
          "state": "CA",
          "va_accepted": false,
          "zip": 90111,
        },
      ]
    }
    logoSource="source"
    name="school name"
    website="website"
  />
</Card>
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
`;
